refactor: reorganizar estructura del proyecto y mejorar documentación
✅ Reestructuración de la organización del proyecto:
- Se implementó una arquitectura modular con directorios específicos para cada capa (frontend, backend, base de datos, etc.).
- Se eliminaron archivos obsoletos y se mejoró la claridad de la estructura del monorepo.

✅ Mejora de la documentación:
- Se actualizaron los archivos README.md y project_structure.md para reflejar la nueva organización y filosofía del proyecto.
- Se añadieron guías de despliegue y documentación técnica en la carpeta docs/.

✅ Actualización de dependencias y configuración:
- Se ajustó la configuración de iOS para soportar la versión 13.0.
- Se añadieron nuevos assets para pruebas de escaneo.

✅ Implementación de nuevas funcionalidades:
- Se introdujeron servicios de recorte de imágenes y OCR, siguiendo los principios SOLID y mejorando la separación de responsabilidades en el código.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>MagicScan necesita acceso a tu cámara para poder escanear documentos y tarjetas de visita.</string>
 </dict>
 </plist>
