--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
+platform :ios, '13.0'
 
-# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+# CocoaPods analytics sends network requests to Segment, Inc. to configure their tool based on the data they collect.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
